# caco

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  UX-REVIEW.md  build_entry.py  caco-gui.spec  caco.spec  cliff.toml  config.example.toml  install.sh  iwad.todo.md  pyproject.toml  release-plz.toml  todo.md
.gitea/workflows/: ci.yml  package.yml
.github/workflows/: _token-scopes-check.yml  ci.yml  package.yml  release-plz.yml  test.yml
TODO/: BUGS.todo.md  TODO.md  binary.todo.md  cli.todo.md  completions.todo.md  complevel-detection.todo.md  data-management.todo.md  id24.todo.md  readme-fixes.todo.md  sourceport_support.todo.md  stats-tracking.todo.md  tui-gui-management.todo.md
TODO/cli-rework/: cli.todo.md  completions.todo.md
TODO/feat/completions-stats-gui/: PLAN.md  _shared.css  a-two-pane.html  b-dropdown-action-row.html  c-tabs.html  index.html
TODO/review/: REVIEW.md
TODO/rust-development/: rust-port.todo.md
TODO/sourceport-support/: sourceport_support.todo.md
TODO/sourceports/: complevel-detection.todo.md  config-management.todo.md  sourport_support.todo.md
TODO/sources/: doomwiki.todo.md
TODO/tests/: tests.todo.md
TODO/wad-features/: data-management.todo.md  id24.todo.md  multi-file-wads.todo.md  stats-tracking.todo.md
assets/: caco.desktop
assets/fonts/: LICENSE-OFL.txt
completions/: _caco  caco.bash  caco.fish
contrib/: build-and-repo.sh
contrib/arch/: PKGBUILD
contrib/arch/caco-git/: packed-refs
contrib/build-scripts/arch/: PKGBUILD
crates/caco-cli/: Cargo.toml  build.rs
crates/caco-cli/completions/: caco.fish
crates/caco-cli/src/: main.rs  output.rs  parsing.rs  picker.rs  resolve.rs
crates/caco-cli/src/commands/: cache.rs  collection.rs  companion.rs  completions.rs  config.rs  demos.rs  enrich.rs  gc.rs  import.rs  info.rs  ls.rs  mod.rs  modify.rs  play.rs  profile.rs  random.rs  saves.rs  stats.rs  trash.rs
crates/caco-core/: Cargo.toml
crates/caco-core/src/: companion_service.rs  completion_detect.rs  complevel.rs  complevel_detect.rs  config.rs  demos.rs  error.rs  iwad_detect.rs  lib.rs  mapinfo.rs  player.rs  resource_service.rs  saves.rs  sourceports.rs  stats_watcher.rs  titlepic.rs  utils.rs  wad_analysis.rs  wad_stats.rs  zdoom_detect.rs
crates/caco-core/src/db/: analysis.rs  cacowards.rs  collections.rs  companions.rs  connection.rs  id24.rs  iwads.rs  mod.rs  models.rs  playthroughs.rs  query.rs  schema.rs  sessions.rs  wads.rs
crates/caco-gui/: Cargo.toml
crates/caco-gui/src/: app.rs  filter_query.rs  lib.rs  main.rs  message.rs  persist.rs  relative_time.rs  state.rs  theme.rs  thumbnails.rs  wiki_scraper.rs  workers.rs
crates/caco-gui/src/app/: dialogs.rs  help.rs  hero.rs  section_header.rs  sidebar.rs  status_bar.rs  topbar.rs
crates/caco-gui/src/dialogs/: cache.rs  cacoward_link.rs  collections.rs  delete.rs  edit.rs  link.rs  mod.rs  resources.rs  sessions.rs  settings.rs  stats.rs  wad_stats.rs
crates/caco-gui/src/import/: form_panel.rs  mod.rs  search_panel.rs  state.rs  workers.rs
crates/caco-gui/src/panels/: cacowards.rs  detail.rs  filter_bar.rs  library.rs  mod.rs  sort_controls.rs  wad_grid.rs  wad_table.rs
crates/caco-mcp/: Cargo.toml
crates/caco-mcp/src/: bin_resolve.rs  cli_runner.rs  cli_tools.rs  cli_tools_macros.rs  error.rs  introspect.rs  lib.rs  main.rs  reset.rs  sandbox.rs  sandbox_tools.rs  schema_transform.rs  server.rs
crates/caco-mcp/tests/: cli_tools.rs  introspect.rs  sandbox_safety.rs  smoke.rs
crates/caco-mcp/tests/common/: mod.rs
crates/caco-sources/: Cargo.toml
crates/caco-sources/src/: error.rs  http.rs  import_service.rs  json_import.rs  lib.rs
crates/caco-sources/src/doomwiki/: cacowards.rs  client.rs  mod.rs  models.rs  parser.rs
crates/caco-sources/src/doomworld/: client.rs  llm.rs  mod.rs  models.rs  parser.rs
crates/caco-sources/src/idgames/: client.rs  mod.rs  models.rs
crates/caco-tui/: Cargo.toml
crates/caco-tui/src/: app.rs  event.rs  input.rs  lib.rs  main.rs  message.rs  theme.rs
crates/caco-tui/src/screens/: cache.rs  cacowards.rs  confirm_delete.rs  mod.rs  resources.rs  sessions.rs  stats.rs  tabbed_library.rs  wad_detail.rs  wad_edit.rs  wad_stats.rs
crates/caco-tui/src/widgets/: filter_input.rs  form_pane.rs  import_pane.rs  library_pane.rs  mod.rs  search_pane.rs  sort_select.rs  status_bar.rs  table_nav.rs  wad_info.rs  wad_table.rs
docs/: CHANGELOG.md  COUNTER-REVIEW.md  DESIGN-reorg.md  PLAN_iwad_rework.md  ROADMAP_env_manager.md  refactor.todo.md
docs/ideas/feat/: mod-profiles.md
docs/superpowers/plans/: 2026-04-08-status-simplification.md  2026-04-14-mcp-server.md
docs/superpowers/specs/: 2026-04-14-mcp-server-design.md
docs/todo/: gui-fixes.todo.md  readme-fixes.todo.md
docs/todo/refactor/: 00-actionable-plan.md  00-qa-verification.md  01-architecture-review.md  02-code-review.md  03-qa-review.md  04-test-automation-review.md  05-refactoring-plan.md  06-python-quality-review.md  07-performance-review.md
mockups/: cacowards-gui.html  gui-combined-v2.html  gui-combined.html  gui-concepts.html
scripts/: build.sh
src/caco/: __init__.py  cli.py  complevel.py  complevel_detect.py  config.py  db.py  demos.py  iwad_detect.py  player.py  saves.py  sourceports.py  stats_watcher.py  utils.py  wad_stats.py
src/caco/cli/: cache.py  (+16 more)
src/desktop/: caco.desktop
tests/: conftest.py  test_reachability.py
tests/unit/: test_cli_library.py  test_cli_stats.py  test_companion_files.py  test_companion_service.py  test_companions.py  test_complevel.py  test_complevel_detect.py  test_config.py  test_db.py  test_db_companions.py  test_db_extended.py  test_db_sessions.py  test_demos.py  test_helion_watcher.py  test_id24.py  test_import_service.py  test_iwad_detect.py  test_iwads.py  test_models.py  test_parsers.py  test_parsing.py  test_player.py  test_query_parser.py  test_query_parser_extended.py  test_resource_service.py  test_saves.py  test_sourceports.py  test_sources.py  test_stats_watcher.py  test_utils.py  test_utils_extended.py  test_uzdoom_watcher.py  test_wad_stats.py
(+112 files in other folders)
