[workspace]
members = [
    "crates/caco-core",
    "crates/caco-sources",
    "crates/caco-cli",
    "crates/caco-tui",
    "crates/caco-gui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Doom WAD library manager"
authors = ["eshen"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# System paths
dirs = "6"

# Text processing
regex = "1"

# Hashing / binary
md-5 = "0.10"
byteorder = "1"

# Image processing
image = { version = "0.25", default-features = false, features = ["png"] }

# Archive
zip = { version = "2", default-features = false, features = ["deflate"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
indicatif = "0.17"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Text processing (sources)
html-escape = "0.2"
unicode-normalization = "0.1"
urlencoding = "2"

# GUI
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect"] }
rfd = "0.15"
open = "5"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"
unicode-width = "0.2"

# Testing
tempfile = "3"

# Internal crates
caco-core = { path = "crates/caco-core" }
caco-sources = { path = "crates/caco-sources" }
