[workspace]
members = [
    "crates/caco-core",
    "crates/caco-sources",
    "crates/caco-cli",
    "crates/caco-tui",
    "crates/caco-gui",
    "crates/caco-mcp",
]
resolver = "3"

[workspace.package]
version = "3.2.9"
edition = "2024"
description = "Doom WAD library manager"
authors = ["eshen"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# System paths
dirs = "6"

# Concurrency
arc-swap = "1"

# Text processing
regex = "1"

# Hashing / binary
md-5 = "0.10"
byteorder = "1"
hex = "0.4"

# Image processing
image = { version = "0.25", default-features = false, features = ["png"] }

# Archive
zip = { version = "2", default-features = false, features = ["deflate"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
indicatif = "0.17"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Text processing (sources)
html-escape = "0.2"
unicode-normalization = "0.1"
urlencoding = "2"

# GUI
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect"] }
rfd = "0.15"
open = "5"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"
unicode-width = "0.2"

# Testing
tempfile = "3"

# MCP server
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-std", "io-util", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs_extra = "1.3"

# Internal crates. The `version` field is needed alongside `path` so release-plz
# can run `cargo package --workspace` during version detection — without it,
# cargo errors with "dependency X does not specify a version" (release-plz
# issue #2595). release-plz keeps these in sync with workspace.package.version
# on every bump.
caco-core = { path = "crates/caco-core", version = "3.2.9" }
caco-sources = { path = "crates/caco-sources", version = "3.2.9" }
caco-mcp = { path = "crates/caco-mcp", version = "3.2.9" }
