[project]
name = "caco"
version = "0.1.0"
description = "Personal Doom WAD library manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "textual>=0.40",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
gui = ["PySide6>=6.5", "Pillow>=10.0"]

[project.scripts]
caco = "caco.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caco"]
