[project]
name = "caco"
version = "0.1.1"
description = "Personal Doom WAD library manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "textual>=0.40",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-mock>=3.12"]
gui = ["PySide6>=6.5", "Pillow>=10.0"]

[project.scripts]
caco = "caco.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",     # Line too long (handled by formatter)
    "UP007",    # Use X | Y for union types (already using)
    "SIM108",   # Ternary operator (readability preference)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
