[package]
name = "caco-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true
md-5.workspace = true
byteorder.workspace = true
image.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
