[package]
name = "caco-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "caco-gui"
path = "src/main.rs"

[dependencies]
caco-core.workspace = true
caco-sources.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
rusqlite.workspace = true
chrono.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
