[package]
name = "caco-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for caco — exposes CLI commands and DB introspection for sandboxed testing"
authors.workspace = true

[[bin]]
name = "caco-mcp-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
caco-core = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fs_extra = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
temp-env = "0.3"
