[package]
name = "caco-sources"
version.workspace = true
edition.workspace = true

[dependencies]
caco-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
regex.workspace = true
html-escape.workspace = true
unicode-normalization.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
rusqlite.workspace = true
