[package]
name = "caco-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "caco-tui"
path = "src/main.rs"

[dependencies]
caco-core.workspace = true
caco-sources.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tui-input.workspace = true
unicode-width.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
chrono.workspace = true
